fixing text align bug

--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -44,7 +44,7 @@
       flex-direction: column;
 
       @include respond(phone) {
-        align-items: center;
+        align-items: left;
       }
 
       &-text {
@@ -52,11 +52,11 @@
 
         @include respond(tab-port) {
           font-size: 1.5rem;
-          text-align: center;
+          text-align: left;
         }
         @include respond(phone) {
           font-size: 1.6rem;
-          text-align: center;
+          text-align: left;
         }
 
         &--important {
